ZMCIntegral/vectest.163071.err
  File "./vec-test.py", line 5
    from numba import 
                     ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
